@@ -1,14 +1,15 @@
 package funcmath.utility;
 
-import funcmath.exceptions.JavaException;
+import funcmath.exceptions.GameException;
+import funcmath.game.Logger;
 import java.io.*;
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Objects;
+import java.util.List;
 
 public class Helper {
   public static Object read(String pathname) {
-    Log.getInstance().write("Reading file " + pathname);
+    Logger.write("Читается файл " + pathname);
     Object ans;
     try {
       FileInputStream fis = new FileInputStream(pathname.replace('\\', '/'));
@@ -16,13 +17,13 @@ public class Helper {
       ans = iis.readObject();
       iis.close();
     } catch (IOException | ClassNotFoundException e) {
-      throw new JavaException(e);
+      throw new RuntimeException(e);
     }
     return ans;
   }
 
   public static void write(Object obj, String pathname) {
-    Log.getInstance().write("Writing file " + pathname);
+    Logger.write("Записывается файл " + pathname);
     try {
       File ourFile = new File(pathname.replace('\\', '/'));
       FileOutputStream fos = new FileOutputStream(ourFile);
@@ -31,10 +32,95 @@ public class Helper {
       oos.flush();
       oos.close();
     } catch (IOException e) {
-      throw new JavaException(e);
+      throw new RuntimeException(e);
     }
 
     // в линуксе может отсутствовать директория у файла, решаю через generateDirectories()
+  }
+
+  public static <T extends Serializable> T deepClone(T o) {
+    try {
+      return (T) Serializer.deserialize(Serializer.serialize(o));
+    } catch (IOException | ClassNotFoundException e) {
+      throw new RuntimeException(e);
+    }
+  }
+
+  public static String getLastGameExceptionMessage(Throwable e) {
+    Throwable ee = Helper.deepClone(e);
+    while (ee != null && !ee.getClass().getSuperclass().equals(GameException.class)) {
+      try {
+        ee = ee.getCause();
+      } catch (Exception ex) {
+        return e.toString();
+      }
+    }
+    if (ee == null) {
+      return getLastMessage(e);
+    }
+    return ee.getMessage();
+  }
+
+  public static String getLastMessage(Throwable e) {
+    Throwable ee = Helper.deepClone(e);
+    while (ee.getMessage() == null) {
+      try {
+        ee = ee.getCause();
+      } catch (Exception ex) {
+        return e.toString();
+      }
+    }
+    return ee.getMessage();
+  }
+
+  public static <T extends Number> int[] toIntArray(ArrayList<T> al) {
+    int size = al.size();
+    int[] ans = new int[size];
+    for (int i = 0; i < size; i++) {
+      ans[i] = al.get(i).intValue();
+    }
+    return ans;
+  }
+
+  public static ArrayList<String> getFileNames(String pathname) {
+    ArrayList<String> answer = new ArrayList<>();
+    File folder = new File(pathname.replace('\\', '/'));
+    File[] listOfFiles = folder.listFiles();
+    if (listOfFiles == null) {
+      return answer;
+    }
+
+    for (File file : listOfFiles) {
+      if (file.isFile()) {
+        answer.add(file.getName());
+      }
+    }
+    return answer;
+  }
+
+  public static boolean isNotFileExists(String pathname) {
+    return !(new File(pathname.replace('\\', '/'))).exists();
+  }
+
+  public static <T extends Number> byte[] toByteArray(ArrayList<T> al) {
+    int size = al.size();
+    byte[] ans = new byte[size];
+    for (int i = 0; i < size; i++) {
+      ans[i] = al.get(i).byteValue();
+    }
+    return ans;
+  }
+
+  public static <T> String collectionToString(Collection<T> list) {
+    StringBuilder sb = new StringBuilder();
+    for (T num : list) {
+      sb.append(num);
+      sb.append(" ");
+    }
+    if (!sb.isEmpty()) {
+      sb.deleteCharAt(sb.lastIndexOf(" "));
+    }
+    return sb.toString();
   }
 
   private static ArrayList<Character> stringProcessing(String str) {
@@ -55,14 +141,14 @@ public class Helper {
         last_char = i;
       }
     }
-    if (!third_str.isEmpty() && third_str.get(third_str.size() - 1) == ' ') {
-      third_str.remove(third_str.size() - 1);
+    if (!third_str.isEmpty() && third_str.getLast() == ' ') {
+      third_str.removeLast();
     }
     return third_str;
   }
 
   public static ArrayList<String> wordsFromString(String str) {
-    ArrayList<Character> our_str = Helper.stringProcessing(str);
+    ArrayList<Character> our_str = stringProcessing(str);
     StringBuilder builder = new StringBuilder();
     ArrayList<String> words = new ArrayList<>();
     for (char i : our_str) {
@@ -76,136 +162,7 @@ public class Helper {
     return words;
   }
 
-  public static int filesCount(String pathname) {
-    return Objects.requireNonNull(new File(pathname.replace('\\', '/')).listFiles()).length;
+  public static ArrayList<String> wordsFromStringOnlySpaces(String str) {
+    return new ArrayList<>(List.of(str.split(" ")));
   }
-
-  public static void clear(PrintStream out) {
-    Log.getInstance().write("Clearing console!");
-    try {
-      if (System.getProperty("os.name").contains("Windows")) {
-        new ProcessBuilder("cmd", "/c", "cls").inheritIO().start().waitFor();
-      } else {
-        out.print("\033\143");
-      }
-    } catch (IOException | InterruptedException ignored) {
-    }
-  }
-
-  public static <T extends Serializable> T deepClone(T o) {
-    try {
-      ByteArrayOutputStream byteOut = new ByteArrayOutputStream();
-      ObjectOutputStream out = new ObjectOutputStream(byteOut);
-      out.writeObject(o);
-      out.flush();
-      ObjectInputStream in = new ObjectInputStream(new ByteArrayInputStream(byteOut.toByteArray()));
-      return Helper.cast(o.getClass().cast(in.readObject()), o);
-    } catch (Exception e) {
-      throw new JavaException(e);
-    }
-  }
-
-  public static boolean isNotFileExists(String pathname) {
-    return !(new File(pathname.replace('\\', '/'))).exists();
-  }
-
-  public static ArrayList<String> getFileNames(String pathname) {
-    ArrayList<String> answer = new ArrayList<>();
-    File folder = new File(pathname.replace('\\', '/'));
-    File[] listOfFiles = folder.listFiles();
-    if (listOfFiles == null) {
-      return answer;
-    }
-
-    for (File file : listOfFiles) {
-      if (file.isFile()) {
-        answer.add(file.getName());
-      }
-    }
-    return answer;
-  }
-
-  public static void generateDirectories() {
-    new File("data").mkdirs();
-    new File("data/logs").mkdirs();
-    Log.getInstance().write("Directories is generating...");
-    new File("data/customLevels").mkdirs();
-    new File("data/functions").mkdirs();
-    new File("data/levels").mkdirs();
-    new File("data/players").mkdirs();
-    new File("data/preLevels").mkdirs();
-    new File("data/locales").mkdirs();
-    new File("data/objects").mkdirs();
-    new File("data/images").mkdirs();
-  }
-
-  public static <T> String collectionToString(Collection<T> list) {
-    StringBuilder sb = new StringBuilder();
-    for (T num : list) {
-      sb.append(num);
-      sb.append(" ");
-    }
-    sb.deleteCharAt(sb.lastIndexOf(" "));
-    return sb.toString();
-  }
-
-  public static <T> T cast(Object obj, T resultClass) {
-    Log.getInstance().write("casting " + obj + " to " + resultClass.getClass());
-    //noinspection unchecked
-    return (T) obj;
-  }
-
-  public static void writeLine(String line, String pathname) {
-    try {
-      FileWriter writer = new FileWriter(pathname, true);
-      writer.write(line + "\n");
-      writer.close();
-    } catch (IOException e) {
-      throw new JavaException(e);
-    }
-  }
-
-  public static <T extends Number> int[] toIntArray(ArrayList<T> al) {
-    int size = al.size();
-    int[] ans = new int[size];
-    for (int i = 0; i < size; i++) {
-      ans[i] = al.get(i).intValue();
-    }
-    return ans;
-  }
-
-  public static ArrayList<Byte> toByteArrayList(byte[] a) {
-    ArrayList<Byte> ans = new ArrayList<>();
-    for (byte b : a) {
-      ans.add(b);
-    }
-    return ans;
-  }
-
-  public static <T extends Number> byte[] toByteArray(ArrayList<T> al) {
-    int size = al.size();
-    byte[] ans = new byte[size];
-    for (int i = 0; i < size; i++) {
-      ans[i] = al.get(i).byteValue();
-    }
-    return ans;
-  }
-
-  public static String toHtmlString(String s) {
-    return "<html>" + s.replace("\n", "<br\\>") + "<html\\>";
-  }
-
-  public static String getLastMessage(Throwable e) {
-    Throwable ee = Helper.deepClone(e);
-    while (ee.getMessage() == null) {
-      try {
-        ee = ee.getCause();
-      } catch (Exception ex) {
-        return e.toString();
-      }
-    }
-    return ee.getMessage();
-  }
-
-  // Когда будет много уровней/игроков: ДОБАВИТЬ СВОЙ ХЕШ
 }
